Spacing for front page header fixed

--- a/react-app/src/components/ProductsList/ProductsList.css
+++ b/react-app/src/components/ProductsList/ProductsList.css
@@ -16,4 +16,5 @@
 
 #products-list-link {
     font-family: "Guardian-EgypTT",Charter,"Charter Bitstream",Cambria,"Noto Serif Light","Droid Serif",Georgia,serif;
+    margin-left: -0.5rem;
 }
